# OpenCV-for-Beginner

./: README.md
cpp/ch-1/: CMakeCache.txt  CMakeLists.txt  Makefile  ch-1  ch-1.cpp  cmake_install.cmake
cpp/ch-2/: CMakeCache.txt  CMakeLists.txt  Makefile  ch-2  ch-2.cpp  cmake_install.cmake
cpp/ch-3/: CMakeCache.txt  CMakeLists.txt  Makefile  ch-3  ch-3.cpp  cmake_install.cmake
cpp/ch-4/: CMakeCache.txt  CMakeLists.txt  Makefile  ch-4  ch-4.cpp  cmake_install.cmake
cpp/ch-5/: CMakeCache.txt  CMakeLists.txt  Makefile  ch-5  ch-5.cpp  cmake_install.cmake
cpp/ch-6/: CMakeCache.txt  CMakeLists.txt  Makefile  ch-6  ch-6.cpp  cmake_install.cmake
cpp/ch-7/: CMakeCache.txt  CMakeLists.txt  Makefile  ch-7  ch-7.cpp  cmake_install.cmake
cpp/ch-8/: CMakeCache.txt  CMakeLists.txt  Makefile  ch-8  ch-8.cpp  cmake_install.cmake
cpp/project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_picker  color_picker.cpp  virtual_painter  virtual_painter.cpp
